<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ESP8266 SmartConfig</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_version">v0.3.4</string>
    <string name="tvApSsidTitle">SSID : </string>
    <string name="tvPasswordTitle">Password : </string>
    <string name="switchIsSsidHiddenTitle">SSID is Hidden</string>
    <string name="spinnerTaskResultCountTitle">Task result count</string>
    <string name="btnConfirmTitle">Confirm</string>
    <string name="banner_ad_unit_id">ca-app-pub-8351886965317352/6795200933</string>
</resources>
