<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/bg_app">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal" >

           <TextView
               android:id="@+id/tvApSsid"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:text="@string/tvApSsidTitle"/>

           <TextView
               android:id="@+id/tvApSssidConnected"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="24sp"
               android:ems="10"
               android:singleLine="true" >
           </TextView>
       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:orientation="horizontal" >

           <TextView
               android:id="@+id/tvApPassword"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:text="@string/tvPasswordTitle"/>

           <EditText
               android:id="@+id/edtApPassword"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:ems="10"
               android:inputType="text"
               android:singleLine="true"
               android:text=""
               tools:ignore="TextFields" >

           </EditText>
       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:gravity="center_vertical"
           android:orientation="horizontal" >

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/switchIsSsidHiddenTitle" />

           <Space
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1" />

           <Switch
               android:id="@+id/switchIsSsidHidden"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               />
       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:gravity="center_vertical"
           android:orientation="horizontal" >

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/spinnerTaskResultCountTitle" />

           <Space
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1" />

           <Spinner
               android:id="@+id/spinnerTaskResultCount"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               />
       </LinearLayout>

       </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_version" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnConfirmTitle"
        android:background="@color/btn_blue"
        android:textColor="@color/text_white"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>